--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "react-scripts": "1.0.17"
   },
   "dependencies": {
+    "@types/jest": "^21.1.8",
     "bootstrap": "4.0.0-beta.2",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-test-renderer": "^16.2.0",
     "reactstrap": "^5.0.0-alpha.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --coverage --watch",
     "eject": "react-scripts eject"
   }
 }
