--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --coverage --watch",
+    "test": "react-scripts test --env=jsdom",
+    "test-watch": "npm test -- --watch",
+    "test-coverage": "npm test -- --coverage",
     "eject": "react-scripts eject"
   }
 }
