--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8081",
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "react-scripts": "1.0.17"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "test": "react-scripts test --env=jsdom",
     "test-watch": "npm test -- --watch",
     "test-coverage": "npm test -- --coverage",
+    "test-coveralls": "cat ./coverage/lcov.info | coveralls",
     "eject": "react-scripts eject"
   }
 }
