--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ cache:
     - node_modules
 script:
   - npm run build
-  - npm test-coverage
-  - npm test-coveralls
+  - npm run test-coverage
+  - npm run test-coveralls
